# nanobot_sim

./: .gitignore  README.md
diff_car/: README.md
diff_car/diff_car_base/: CMakeLists.txt  package.xml
diff_car/diff_car_base/launch/: display.launch
diff_car/diff_car_base/urdf/: move.xacro
diff_car/diff_car_control/: CMakeLists.txt  package.xml
diff_car/diff_car_gazebo/: CMakeLists.txt  package.xml
diff_car/diff_car_gazebo/launch/: diff_car_gazebo.launch
diff_car/diff_car_gazebo/rviz/: rviz.rviz
diff_car/diff_car_gazebo/worlds/: weston_robot_empty.world
diff_tracked/: README.md
diff_tracked/diff_tracked_base/: CMakeLists.txt  package.xml
diff_tracked/diff_tracked_base/launch/: display_urdf.launch  display_xacro.launch
diff_tracked/diff_tracked_base/rviz/: display.rviz
diff_tracked/diff_tracked_base/urdf/: bunker.urdf  bunker.urdf.xacro  bunker.xacro  imu_driver.xacro  imu_link.xacro  laser_driver.xacro  laser_link.xacro
diff_tracked/diff_tracked_bringup/: CMakeLists.txt  package.xml
diff_tracked/diff_tracked_bringup/launch/: tracked_fastlio_control.launch
diff_tracked/diff_tracked_control/: CMakeLists.txt  package.xml
diff_tracked/diff_tracked_control/launch/: straight_line_control.launch
diff_tracked/diff_tracked_control/scripts/: copy.py  straight_line_controller.py
diff_tracked/diff_tracked_control/src/: straight_line_controller.cpp
diff_tracked/diff_tracked_gazebo/: CMakeLists.txt  package.xml
diff_tracked/diff_tracked_gazebo/launch/: bunker_gazebo_sim.launch
diff_tracked/diff_tracked_gazebo/rviz/: display.rviz
diff_tracked/diff_tracked_gazebo/urdf/: bunker.urdf.xacro  bunker.xacro
diff_tracked/diff_tracked_gazebo/worlds/: clearpath_playpen.world  cooneo_office.world  staggered_blocks_50m.world
quad_uav/: README.md
quad_uav/quad_uav_base/: clean_env.sh  rspx4sitl_beta.sh
quad_uav/quad_uav_base/sh/: rspx4sitl.sh
quad_uav/quad_uav_gazebo/: CMakeLists.txt  package.xml
quad_uav/quad_uav_gazebo/models/D435i_light/: D435i_light.sdf  model.config
quad_uav/quad_uav_gazebo/models/iris_d435/: iris_d435.sdf  model.config
quad_uav/quad_uav_gazebo/models/iris_lidar/: iris_lidar.sdf  model.config
quad_uav/quad_uav_gazebo/scripts/: pointcloud_to_body.py  rc_sim.py  rspx4.sh  rspx4_beta.sh
quad_uav/quad_uav_gazebo/worlds/: iscas_museum.world
