<?xml version="1.0"?>
<package format="2">
  <name>diff_car_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation environments and launch files for diff_car.</description>

  <maintainer email="zhanzhihao_dt@163.com">zhan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>diff_car_base</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

</package>
