<?xml version="1.0"?>
<package format="2">
  <name>quad_uav_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo models, worlds, and ROS nodes for quadrotor UAV simulation.</description>

  <maintainer email="kc.zh@foxmail.com">nixe-kzh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export/>
</package>
